--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class='top_page_header'>
-  <div class= "header_logo"> 
-    Inventory control α 
+  <div class= "header_title"> 
+    <%= link_to "Inventory control α", root_path, class: "title" %>
   </div>
   <div class='nav'>
     <ul class='header_right'>
