--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -10,6 +10,7 @@
   display: flex;
   margin-right: 10px;
 }
+
 .login{
   font-size: 15px;
   color: white;
@@ -21,10 +22,14 @@
   margin-top: 30px;
 }
 
-  .header_logo{
+  .header_title{
+   margin: 15px 0px 15px 10px;
+  }
+
+  .title{
    color: white;
    font-size: 40px;
-   margin: 15px 0px 15px 10px;
+   text-decoration: none;
   }
 
   .openbtn {
