--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
+ <%= render "shared/header" %>
   <body>
     <%= yield %>
   </body>
+   <%= render "shared/footer" %>
 </html>
